# HitPlus

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  pyproject.toml
src/hitplus/: cli.py
src/hitplus/core/: __init__.py  artifact.py  config.py  db.py  pipeline.py  types.py
tests/: conftest.py
