[project]
name = "hitplus"
version = "0.1.0"
description = "Pitch-by-pitch hitter outcome model"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=1.25",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.2",
]

[project.scripts]
hitplus = "hitplus.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitplus"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["regression: performance threshold tests"]
